# layered-segmentation

./: .gitignore  README.md  Taskfile.yml  provisioning_script.sh  pyproject.toml  requirements.txt  sandbox.ipynb
examples/: depth_anything_v2.ipynb  depth_segmentation_demo.ipynb
src/: object_mask.py
